Removed bottom:0; from .media in login.css to fix robot alignment

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -186,7 +186,6 @@ input:focus {
 
 .media {
     position:absolute;
-    bottom:0;
     left:50%;
     margin-left:-162px;
     width:325px;
